Hopeful fix for issue loading up to date config
It seems that previous build would bake the config into the prod deployment and not actually read the file in github on main branch.

--- a/src/app/qr/qr_landing_page.html
+++ b/src/app/qr/qr_landing_page.html
@@ -1,10 +1,5 @@
-<!-- Unsupported Action Warning -->
-<p *ngIf="showUnsupportedRedirectionMessage">
-  Warning! The following action is not supported yet: {{qrConfig?.actionType}}
-</p>
-
 <!-- Emergency Info -->
-<div *ngIf="qrConfig?.actionType === 'EMERGENCY_INFO'">
+<div *ngIf="showEmergencyInfo">
     <div><b>Name:</b> Blake Williams</div>
     <div><b>Height:</b> 5'8" (173cm)</div>
     <div><b>Age:</b> {{calculateAge()}}</div>
