Fixing issue with downloading VCF and generic files

--- a/src/app/qr/qr_landing_page.html
+++ b/src/app/qr/qr_landing_page.html
@@ -1,3 +1,5 @@
+<p *ngIf="showFileNotFoundMessage">Specified file for download not found</p>
+
 <!-- Emergency Info -->
 <div *ngIf="showEmergencyInfo">
     <div><b>Name:</b> Blake Williams</div>
