--- a/src/app/qr/ar_index.html
+++ b/src/app/qr/ar_index.html
@@ -13,7 +13,7 @@
 
       <a-assets>
         <!-- https://raw.githubusercontent.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/scene.gltf -->
-          <a-asset-item id="animated-asset" src="../../assets/armodels/trex/scene.gltf"></a-asset-item>
+          <a-asset-item id="animated-asset" src="https://raw.githubusercontent.com/blakewilliams1/blakewilliams1.github.io/main/src/assets/armodels/trex/scene.gltf"></a-asset-item>
       </a-assets>
 
       <a-marker id="animated-marker" type='barcode' value='6'>
