--- a/src/app/qr/ar_index.html
+++ b/src/app/qr/ar_index.html
@@ -8,31 +8,42 @@
     <script src='https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js'></script>
   </head>
 
-  <body style='margin : 0px; overflow: hidden;'>
-    <a-scene embedded vr-mode-ui="enabled: false" arjs="sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">
+  <body onload="getAssetUrl()" style='margin : 0px; overflow: hidden;'>
+    <script type = "text/javascript">  
+      function getAssetUrl() {   
+        var resourceUrl = 'https://raw.githubusercontent.com/blakewilliams1/blakewilliams1.github.io/main/src/assets/armodels/';
+        var xhr = new XMLHttpRequest();
+        xhr.open('GET', 'https://raw.githubusercontent.com/blakewilliams1/blakewilliams1.github.io/main/src/app/qr/qr_config.json', true);
+        xhr.responseType = 'json';
+        xhr.onload = function() {
+          var status = xhr.status;
+          if (status === 200) {
+            console.log(xhr.response);
+            resourceUrl += xhr.response.arModelName + '/scene.gltf';
+            console.log(resourceUrl);
+            var entity = document.createElement("a-entity");
+            entity.setAttribute('gltf-model', resourceUrl);
+            entity.setAttribute('scale', '0.07 0.07 0.07');
+            entity.setAttribute('animation-mixer', true);
+            document.getElementById("animated-marker").appendChild(entity);
+          } else {
+            console.error(status);
+            console.error(xhr.response);
+          }
+        };
+        xhr.send();
+      }  
+    </script> 
 
+    <a-scene embedded vr-mode-ui="enabled: false" arjs="sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">
       <a-assets>
         <!-- https://raw.githubusercontent.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/scene.gltf -->
-          <a-asset-item id="animated-asset" src="https://raw.githubusercontent.com/blakewilliams1/blakewilliams1.github.io/main/src/assets/armodels/trex/scene.gltf"></a-asset-item>
       </a-assets>
 
       <a-marker id="animated-marker" type='barcode' value='6'>
-          <a-entity
-              animation-mixer
-              gltf-model="#animated-asset"
-              scale="0.07 0.07 0.07">
-          </a-entity>
       </a-marker>
 
       <a-entity camera></a-entity>
     </a-scene>
   </body>
 </html>
-
-<!-- <script src='https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js'></script>
-<a-nft
-type='nft' url='../../assets/arfinderimage/trex'
-smooth='true' smoothCount='10' smoothTolerance='0.01' smoothThreshold='5'>
-<a-entity>....</a-entity>
-</a-nft>
- -->
