--- a/src/app/qr/qr_landing_page.html
+++ b/src/app/qr/qr_landing_page.html
@@ -2,7 +2,7 @@
 
 <!-- sanitizer.bypassSecurityTrustResourceUrl(' -->
 <!-- <iframe  src="example.com" width="1000" height="1000"  frameborder="0"></iframe> -->
-<iframe *ngIf="showArViewer" #iframe width="400" height="600" src="ar_index.html"></iframe>
+<!-- <iframe *ngIf="showArViewer" #iframe width="400" height="600" src="ar_index.html"></iframe> -->
 <!-- <div [innerHTML]="arInnerContent | async"></div> -->
 
 <!-- Emergency Info -->
