--- a/src/app/qr/aboutqr/about_qr_page.scss
+++ b/src/app/qr/aboutqr/about_qr_page.scss
@@ -1,11 +1,20 @@
-.question {
-    font-size: 1.3rem;
+.page-container {
+    margin: 20px;
 }
 
-.answer {
-    margin-left: 20px;
+mat-expansion-panel-header {
+   height: fit-content;
+   margin: 6px 0;
 }
 
-.faq-container {
-    padding: 20px;
+mat-card {
+    margin-bottom: 20px;
+}
+
+.header-description-divider {
+    background-image: linear-gradient(to right, #f81d00 0%, #f9d423 100%);height: 1px;
+    left: -24px;
+    margin-bottom: 12px;
+    position: relative;
+    width: calc(100% + 48px);
 }
