--- a/src/app/qr/ar_index.html
+++ b/src/app/qr/ar_index.html
@@ -40,6 +40,7 @@
         <!-- https://raw.githubusercontent.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/scene.gltf -->
       </a-assets>
 
+      <!-- <a-marker id="animated-marker" preset='custom' type='pattern' url='https://raw.githubusercontent.com/blakewilliams1/blakewilliams1.github.io/main/src/assets/arfinderimage/qrtattooo_pattern.patt'></a-marker> -->
       <a-marker id="animated-marker" type='barcode' value='5'>
       </a-marker>
 
