--- a/src/app/qr/ar_index.html
+++ b/src/app/qr/ar_index.html
@@ -160,6 +160,7 @@
         },
 
         init: function () {
+          console.log('gesture handing starting');
           this.handleScale = this.handleScale.bind(this);
           this.handleRotation = this.handleRotation.bind(this);
           this.isVisible = false;
@@ -231,7 +232,7 @@
             console.log(resourceUrl);
             var entity = document.createElement("a-entity");
             entity.setAttribute('gltf-model', resourceUrl);
-            entity.setAttribute('gesture-handler', "minScale: 0.25; maxScale: 10");
+            entity.setAttribute('gesture-handler', "minScale: 0.01; maxScale: 10");
             entity.setAttribute('scale', '0.07 0.07 0.07');
             entity.setAttribute('animation-mixer', true);
             document.getElementById("animated-marker").appendChild(entity);
