--- a/src/app/qr/ar_index.html
+++ b/src/app/qr/ar_index.html
@@ -6,6 +6,7 @@
 
     <script src='https://cdn.jsdelivr.net/gh/aframevr/aframe@1c2407b26c61958baa93967b5412487cd94b290b/dist/aframe-master.min.js'></script>
     <script src='https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js'></script>
+    <script src="https://cdn.jsdelivr.net/gh/donmccurdy-up-for-adoption/aframe-extras/dist/aframe-extras.loaders.min.js"></script>
   </head>
 
   <body onload="getAssetUrl()" style='margin : 0px; overflow: hidden;'>
@@ -234,7 +235,7 @@
             entity.setAttribute('gltf-model', resourceUrl);
             entity.setAttribute('gesture-handler', "minScale: 0.01; maxScale: 10");
             entity.setAttribute('scale', '0.07 0.07 0.07');
-            entity.setAttribute('animation-mixer', true);
+            entity.setAttribute('animation-mixer', '');
             document.getElementById("animated-marker").appendChild(entity);
           } else {
             console.error(status);
