Progress on lazy loading routes

--- a/src/app/about/about_me_page.html
+++ b/src/app/about/about_me_page.html
@@ -3,3 +3,6 @@
   <a mat-tab-link routerLink="/">Home</a>
   <a mat-tab-link routerLink="/about">About</a>
 </nav>
+
+<p>My name is Blake Williams, I'm a software engineer.</p>
+<timeline [timelineEvents]="projectTimeline"></timeline>
