--- a/src/app/homepage/home_page.scss
+++ b/src/app/homepage/home_page.scss
@@ -9,3 +9,8 @@ mat-tab-group {
 ::ng-deep .mat-tab-group .mat-tab-header {
     border-bottom: none;
 }
+
+timeline {
+    display: block;
+    margin: 20px;
+}
