--- a/src/styles.scss
+++ b/src/styles.scss
@@ -37,3 +37,18 @@ $personalsite-theme: mat-dark-theme((
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+// Any link that is visited, 'a' tag or otherwise, not within the header nav.
+*:visited:not(nav *) {
+  color: #4dd0e1;
+}
+
+*:link:not(nav *) {
+  color: white;
+  font: bold;
+}
+
+nav {
+  width: fit-content;
+  margin: auto;
+}
