Switching to use back-facing camera for now
Will need to read from the config file to determine type of tracking in the future, but focusing on only hands for now

--- a/src/app/qr/ar_tracking_tests.html
+++ b/src/app/qr/ar_tracking_tests.html
@@ -46,7 +46,8 @@
           await hands.send({image: videoElement});
         },
         width: 1280,
-        height: 720
+        height: 720,
+        facingMode: 'environment'
       });
       camera.start();
       </script>
