Filling in About Me page

--- a/src/app/about/about_me_page.html
+++ b/src/app/about/about_me_page.html
@@ -4,5 +4,8 @@
   <a mat-tab-link routerLink="/about">About</a>
 </nav>
 
-<p>My name is Blake Williams, I'm a software engineer.</p>
+<p class="preamble">
+  My name is Blake Williams, I'm a software engineer currently working at Google.
+  Here's a brief history of my career and what I've been up to!
+</p>
 <timeline [timelineEvents]="projectTimeline"></timeline>
