--- a/src/styles.scss
+++ b/src/styles.scss
@@ -48,6 +48,10 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   font: bold;
 }
 
+b {
+  color: white;
+}
+
 nav {
   width: fit-content;
   margin: auto;
