--- a/src/app/homepage/home_page.scss
+++ b/src/app/homepage/home_page.scss
@@ -26,3 +26,29 @@ mat-tab-group {
         text-align: center;
     }
 }
+
+.language-skill-container {
+    margin: 0 20%
+}
+
+.language-skill {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 10px;
+
+    .skill-label-container {
+    justify-content: space-between;
+    display: flex;
+    flex-direction: row;
+    }
+}
+
+.progress-bar {
+    width: 100%;
+    background-color: gray;
+}
+
+.progress-bar-fill {
+    display: block;
+    height: 5px;    
+}
