Fixing links in the projects page
Also doing some CSS improvements

--- a/src/app/about/about_me_page.html
+++ b/src/app/about/about_me_page.html
@@ -1,7 +1,7 @@
 <nav mat-tab-nav-bar>
   <a mat-tab-link routerLink="/projects">Projects</a>
   <a mat-tab-link routerLink="/">Home</a>
-  <a mat-tab-link routerLink="/about">About</a>
+  <a mat-tab-link [style.opacity]="1" routerLink="/about">About</a>
 </nav>
 
 <p class="preamble">Here's a brief history of my career and what I've been up to!</p>
