--- a/src/styles.scss
+++ b/src/styles.scss
@@ -56,3 +56,15 @@ nav {
   width: fit-content;
   margin: auto;
 }
+
+.mat-tab-nav-bar {
+  text-align:center;
+  padding-bottom:1px;
+  background:
+    linear-gradient(to right, #f81d00 0%, #f9d423 100%)
+    left 
+    bottom
+    transparent    
+    no-repeat; 
+  background-size:100% 1px ;
+}
