--- a/src/app/qr/aboutqr/about_qr_page.scss
+++ b/src/app/qr/aboutqr/about_qr_page.scss
@@ -1,10 +1,5 @@
 .page-container {
-    margin: 20px;
-}
-
-mat-expansion-panel-header {
-   height: fit-content;
-   margin: 6px 0;
+    margin: 20px 10%;
 }
 
 mat-card {
