Minor CSS tweaks

--- a/src/app/homepage/home_page.scss
+++ b/src/app/homepage/home_page.scss
@@ -22,7 +22,7 @@ mat-tab-group {
     }
 
     .sub-title {
-        margin-top: 50px;
+        margin: 50px 20px 12px;
         text-align: center;
     }
 }
