Fix for linkedin link

--- a/src/app/homepage/home_page.html
+++ b/src/app/homepage/home_page.html
@@ -9,7 +9,7 @@
   <p class="sub-title">Hi, my name's Blake Williams<br>I'm a software engineer at Google working on AR/VR projects</p>
 
   <span>
-    <a href="linkedin.com/in/blauwill">LinkedIn</a>, <a href="https://github.com/blakewilliams1">Github</a>
+    <a href="https://linkedin.com/in/blauwill">LinkedIn</a>, <a href="https://github.com/blakewilliams1">Github</a>
   </span>
 </div>
 
