Adding minitron info to projects page

--- a/src/app/projects/projects_page.html
+++ b/src/app/projects/projects_page.html
@@ -6,6 +6,20 @@
 
 <mat-card>
   <mat-card-header>
+    <mat-card-title>16 Segment Minitron Altimeter</mat-card-title>
+    <mat-card-subtitle>falling with style</mat-card-subtitle>
+    <a href="https://imgur.com/a/gBYLfQS" target="_blank"><mat-icon>launch</mat-icon></a>
+  </mat-card-header>
+  <p>
+    The altimeter is a must have instrument every time you go skydiving, so why not make it cool?
+    I savaged several <a href="https://www.industrialalchemy.org/storearticleview.php?item=113" target="_blank">KW-105AL diplays</a>
+    from avionics equipment an the good ol' BMP280 barometer to make an altimeter with.<br>
+    Finding even 4 of these displays <i>anywhere</i> online literally took months of scouring.
+  </p>
+</mat-card>
+
+<mat-card>
+  <mat-card-header>
     <mat-card-title>QR Code Tattoo</mat-card-title>
     <mat-card-subtitle>yes, it's permanent</mat-card-subtitle>
     <a routerLink="/qr/about"><mat-icon>launch</mat-icon></a>
