--- a/src/app/projects/projects_page.html
+++ b/src/app/projects/projects_page.html
@@ -6,6 +6,19 @@
 
 <mat-card>
   <mat-card-header>
+    <mat-card-title>Motorcycle ride along the Pony Express</mat-card-title>
+    <mat-card-subtitle>giddy up</mat-card-subtitle>
+    <a href="https://www.advrider.com/f/threads/san-jose-california-park-city-utah-via-pony-express.1495742/" target="_blank"><mat-icon>launch</mat-icon></a>
+  </mat-card-header>
+  <p>
+    I rode my motorcycle long the original overland trail that is the Pony Express, from Sacramento to
+    Salt Lake City Utah. This covered ~700 miles of dirt road and many stops along the way at historic
+    stations used by the original Pony Express business.
+  </p>
+</mat-card>
+
+<mat-card>
+  <mat-card-header>
     <mat-card-title>16 Segment Minitron Altimeter</mat-card-title>
     <mat-card-subtitle>falling with style</mat-card-subtitle>
     <a href="https://imgur.com/a/gBYLfQS" target="_blank"><mat-icon>launch</mat-icon></a>
