--- a/src/app/projects/projects_page.html
+++ b/src/app/projects/projects_page.html
@@ -6,6 +6,20 @@
 
 <mat-card>
   <mat-card-header>
+    <mat-card-title>Motorcycle ride from San Francisco to the Arctic Ocean</mat-card-title>
+    <mat-card-subtitle>About as remote as you can get</mat-card-subtitle>
+    <a href="https://www.advrider.com/f/threads/san-francisco-to-tuktoyaktuk-2022.1559749/" target="_blank"><mat-icon>launch</mat-icon></a>
+  </mat-card-header>
+  <p>
+    I rode my motorcycle from the SF Bay Area up the California coast, Orgeon coast, Washington
+    coast, took a ferry to Vancouver island, took another ferry back to Prince Rupert BC, rode to
+    the Yukon, then rode the Dempster Highway to the town of Tuktoyaktuk, NWT Canada to see the
+    Arctic Ocean.
+  </p>
+</mat-card>
+
+<mat-card>
+  <mat-card-header>
     <mat-card-title>Motorcycle ride along the Pony Express</mat-card-title>
     <mat-card-subtitle>giddy up</mat-card-subtitle>
     <a href="https://www.advrider.com/f/threads/san-jose-california-park-city-utah-via-pony-express.1495742/" target="_blank"><mat-icon>launch</mat-icon></a>
