Adding to projects page

--- a/src/app/projects/projects_page.html
+++ b/src/app/projects/projects_page.html
@@ -6,6 +6,17 @@
 
 <mat-card>
   <mat-card-header>
+    <mat-card-title>Faux neon sign art</mat-card-title>
+    <mat-card-subtitle>Neon signs without glass blowing</mat-card-subtitle>
+    <a href="https://imgur.com/a/dxwt7oJ" target="_blank"><mat-icon>launch</mat-icon></a>
+  </mat-card-header>
+  <p>
+    I found some art online that inspired me to try out making faux neon signs out of led strips
+    tucked inside of diffuser tubing. The end result speaks for itself!
+  </p>
+</mat-card>
+<mat-card>
+  <mat-card-header>
     <mat-card-title>Motorcycle ride from San Francisco to the Arctic Ocean</mat-card-title>
     <mat-card-subtitle>About as remote as you can get</mat-card-subtitle>
     <a href="https://www.advrider.com/f/threads/san-francisco-to-tuktoyaktuk-2022.1559749/" target="_blank"><mat-icon>launch</mat-icon></a>
