Adding entry to projects page for the flip dot project

--- a/src/app/projects/projects_page.html
+++ b/src/app/projects/projects_page.html
@@ -6,8 +6,20 @@
 
 <mat-card>
   <mat-card-header>
-    <mat-card-title>Faux neon sign art</mat-card-title>
-    <mat-card-subtitle>Neon signs without glass blowing</mat-card-subtitle>
+    <mat-card-title>Flip Dot Wall Project</mat-card-title>
+    <mat-card-subtitle>like oldschool train displays but better</mat-card-subtitle>
+    <a href="https://imgur.com/a/BrJ20zV" target="_blank"><mat-icon>launch</mat-icon></a>
+  </mat-card-header>
+  <p>
+    An old wall of flip dots at work fell into disrepair, and the panels were being parted out.
+    I was able to snag a few of them and recreate the wall in a miniature version! It even uses
+    a depth camera to show your silhouette in real time as you move in front of it like the original.
+  </p>
+</mat-card>
+<mat-card>
+  <mat-card-header>
+    <mat-card-title>Faux Neon Sign Art</mat-card-title>
+    <mat-card-subtitle>neon signs without glass blowing</mat-card-subtitle>
     <a href="https://imgur.com/a/dxwt7oJ" target="_blank"><mat-icon>launch</mat-icon></a>
   </mat-card-header>
   <p>
