More content and first pass as lazy loading images

--- a/src/app/projects/mauritania_trip/mauritania_trip_page.scss
+++ b/src/app/projects/mauritania_trip/mauritania_trip_page.scss
@@ -12,3 +12,10 @@ img {
 mat-card {
   margin: 20px 10%;
 }
+
+.youtube-player {
+  aspect-ratio: 16 / 9;
+  display: block;
+  margin: 1em 0;
+  width: 100%;
+}
