Typo fixing and a little bit more content

--- a/src/app/projects/projects_page.html
+++ b/src/app/projects/projects_page.html
@@ -6,6 +6,17 @@
 
 <mat-card>
   <mat-card-header>
+    <mat-card-title>Hiking the Sahara Desert</mat-card-title>
+    <mat-card-subtitle>no, we didn't ride the camels</mat-card-subtitle>
+    <a href="/mauritania_trip" target="_blank"><mat-icon>launch</mat-icon></a>
+  </mat-card-header>
+  <p>
+    In the early spring of 2023 I solo traveled to Mauritania, west Africa to hike through a portion
+    of the Sahara desert over 6 and a half days, and hop the worlds longest freight train.
+  </p>
+</mat-card>
+<mat-card>
+  <mat-card-header>
     <mat-card-title>Flip Dot Wall Project</mat-card-title>
     <mat-card-subtitle>like oldschool train displays but better</mat-card-subtitle>
     <a href="https://imgur.com/a/BrJ20zV" target="_blank"><mat-icon>launch</mat-icon></a>
