final touches to Mauritania trip page

--- a/src/app/projects/mauritania_trip/mauritania_trip_page.html
+++ b/src/app/projects/mauritania_trip/mauritania_trip_page.html
@@ -22,6 +22,11 @@
       system", and your phone agents blowing me off when I try to warn about my upcoming travels)</li>
   </ol>
 
+  <p>
+    I'd like to thank Namoud from Camping Inimi in Atar for helping coordinate a portion of this trip. If you're
+    interested a trip like this you can contact him on <a href="https://wa.me/22222292023" target="_blank">Whatsapp</a>
+    or at <a href="mailto:trekkingsahara@gmail.com">trekkingsahara@gmail.com</a>.
+  </p>
   <div class="divider"></div>
   <h2>Day 1</h2>
 
@@ -59,10 +64,8 @@
     helped everyone unload the taxi that was brimming full. Next the driver dropped me off and I met my initial
     contact, Namoud. He runs <a href="https://goo.gl/maps/dDzoNgkv4mybgtj58" target="_blank">Camping Inimi</a>, and is
     the contact I was first put in touch with by a German couple I reached out to on a motorcycle forum I'm on. Namoud
-    was awesome and <b>I recommend you reach out to him if you are thinking about visiting Mauritania</b> and doing any
-    inland
-    signseeing/tourism. He organized the guides and plan for me over email. His email is trekkingsahara@gmail.com and
-    <a href="https://wa.me/22222292023" target="_blank">this is his Whatsapp</a>. Very friendly people! We spoke in
+    was awesome. I recommend you reach out to him if you are thinking about visiting Mauritania and doing any inland
+    signseeing/tourism. He organized the guides and plan for me over email. Very friendly people! We spoke in
     english; the first time all day I'd had that luxury he showed me around the premise and then we had coffee. I
     rested afterwards for a few hours, paid for everything, then helped collect water from their well for later
     purification. At this point it was almost evening and Namoud invited me and our mutual contact down the road to his
@@ -93,7 +96,7 @@
     We walked through some of the more historic sections of town. All the buildings were made of stacked dark brown rock
     flat and sandstone like there were no paved roads in town, there had been no paved roads for the last 40 mi-ish to
     get there.
-    
+
     <img loading="lazy" src="https://drive.google.com/uc?export=view&id=1flGD0KpRPl2iMojXCvmcz8LTa23ijhy8" />
     <img loading="lazy" src="https://drive.google.com/uc?export=view&id=1cEC0iy7g7zC1G8NfQUa9x46uGinCmZ8U" />
     We visited a local library and a caretaker explained in a brief history of the town and the library.
@@ -157,13 +160,12 @@
     <img loading="lazy" src="https://drive.google.com/uc?export=view&id=1bgs7a1G7dNB5zQbYN2cH7doOnAjd__iP" />
     My guides exchanged a few words with the nomads, they offered some goat milk, but I didn't drink it just due to a
     mistranslation on my part. I wasn't sure if it was being offered to me or just an explanation of what it was. We
-    kept
-    walking and eventually stopped for lunch under a tree as the grasslands flattened out. We stopped during the hottest
-    part of the day and the winds picked up. A fine red sand would blow across the ground and if you weren't careful it
-    would thinly coat your food if you didn't guard against it. After eating we slept for about 2 hours beneath the tree
-    and waited for the hottest part of the day to be done. Even in the hottest part of the day it never felt more than
-    about 87 or 90F. I was really worried about the heat because of online weather reports of 110F but it never felt
-    nearly that bad.
+    kept walking and eventually stopped for lunch under a tree as the grasslands flattened out. We stopped during the
+    hottest part of the day and the winds picked up. A fine burnt red sand would blow across the ground and if you
+    weren't careful it would thinly coat your food if you didn't guard against it. After eating we slept for about 2
+    hours beneath the tree and waited for the hottest part of the day to be done. Even in the hottest part of the day
+    it never felt more than about 87 or 90F. I was really worried about the heat because of online weather reports of
+    110F but it never felt nearly that bad.
     <img loading="lazy" src="https://drive.google.com/uc?export=view&id=1fJgss7IWDvV0yeMX1f5BZ9bcgmYmC6zy" />
     We kept walking after our rest but this was incredibly hard for me. I don't think I've eaten a lot on this
     trip so far because it was just hard to get food in your system when you're exerting physically. I was feeling super
@@ -250,7 +252,7 @@
     <img loading="lazy" src="https://drive.google.com/uc?export=view&id=1cVAdrUOTmyehHc2XDp7_fTOl-cFZPOtU" />
     This region felt very hot. The rocks would reflect the sun like a mirror at the right angle and heat the air around
     you.
-    <img loading="lazy" src="https://drive.google.com/uc?export=view&id=1cQYfArXPFwwl9411dQDlqyP9Oknzoh2Q" />
+    <img loading="lazy" src="https://drive.google.com/uc?export=view&id=1cQYfArXPFwwl9411dQDlqyP9OknzoH1Q" />
     Walking through it would sometimes be easy if the rocks were smooth and large enough, but many times it would just
     be trying to walk between them every step. Much more cumbersome to walk around as well both for us and the camels.
     Lucky for us, there was a whole valley worth of this shit that we were about to cross to. We stopped in another
@@ -275,9 +277,10 @@
 
     After we left we walked up the sloping cliff side to the west, opposite of the one we descended. The landscape now
     was a sandy floor with mixed trees, bushes, and two black mountain ranges on both sides holding it all in. We walk
-    through this for a little longer before setting up camp in another dry riverbed. There wasn't much walking today,
-    which further says that we were almost there. Even though it's been challenging at times I am sad to see the end of
-    the trek approaching
+    through this for a little longer before setting up camp in another dry riverbed.
+    <img loading="lazy" src="https://drive.google.com/uc?export=view&id=1fs4CZDY0xJsinhcJF40Jsv84EDEnn_ei" />
+    There wasn't much walking today, which further says that we were almost there. Even though it's been challenging at
+    times I <i>am</i> sad to see the end of the trek approaching
   </p>
 
   <div class="divider"></div>
@@ -347,7 +350,7 @@
     overlanding Jeep and joined us for second dinner. He told stories about his time in Senegal, The Gambia, and Guinea
     Bissau. We all ripped apart pieces of baguette bread and used it to scoop up rice and camel meat from a communal
     plate while continuing to share travel stories in mixtures of English and French, and it was all very good.
-    
+
     <iframe class="youtube-player" src="https://www.youtube.com/embed/7jbgUn1fCZg" frameborder="0"
       allow="accelerometer; clipboard-write; encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
     If you're wondering, camel meat tastes good. The fat is incredibly chewy; probably the chewiest fat of any animal
