last last touches

--- a/src/app/projects/mauritania_trip/mauritania_trip_page.html
+++ b/src/app/projects/mauritania_trip/mauritania_trip_page.html
@@ -152,10 +152,12 @@
     air as the sky was fading to thin shades of blue on the horizon. We had a breakfast of crepes lightly spread with
     cheese and strawberry jelly, and coffee. After packing up reloading the camels with cargo, we continued on. We
     crossed a few more ridgelines but this time there was some plant life! The dunes climbed just as high but on
-    more shallow grade and speckled with these spiky Saharan grass plants. After a couple hours of walking through this
-    we came across a nomad family in their large tent structure. Werating. T approached I saw their tent was a few
-    wooden poles in the ground and stitched fabrics and tarps to make the structure. In front of it was a camel getting
-    a haircut and vocalizing its displeasure of it, like a cat getting a bath.
+    more shallow grade and speckled with these longer Saharan grass plants.     
+    <img loading="lazy" src="https://drive.google.com/uc?export=view&id=1bizp1BhkY-si2_JVxDw1QdAJVtHOl6bR" />
+    After a couple hours of walking through this we came across a nomad family in their large tent structure. When we
+    approached I saw their tent was a few wooden poles in the ground and stitched fabrics and tarps to make the
+    structure. In front of it was a camel getting a haircut and vocalizing its displeasure of it, like a cat getting a
+    bath.
 
     <img loading="lazy" src="https://drive.google.com/uc?export=view&id=1bgs7a1G7dNB5zQbYN2cH7doOnAjd__iP" />
     My guides exchanged a few words with the nomads, they offered some goat milk, but I didn't drink it just due to a
