promise last typo fixes

--- a/src/app/projects/mauritania_trip/mauritania_trip_page.html
+++ b/src/app/projects/mauritania_trip/mauritania_trip_page.html
@@ -37,11 +37,14 @@
     the plane, you're hit with a much more humid air than you'd expect. The capital city is on the coast and
     you can feel it for sure. Visa processing is very standard, but the people out here treat lines very strangely.
     People will literally walk in front of you if you do not actively block or stop them from doing so. This happened
-    on multiple occasions, in multiple lines. When we landed it was still night time. Walking out past security with
+    on multiple occasions, in multiple lines. When we landed it was still night time. After walking out past security with
     my visa, I went to the nearest ATM I found to withdraw more money, just in case. Lo and behold the machine gave me
     error messages; I had called my bank twice to give a travel warning and get reassurance this wouldn't happen.
     Both times they assured me there will be no issues. Thank God I brought emergency US dollars stashed in my pack
-    just in case. Walking out of the airport, it really hit me how much of a fish out of water I was. It was still
+    just in case.
+    </p>
+    <p>
+    Walking out of the airport, it really hit me how much of a fish out of water I was. It was still
     night, there's almost no one around, and every person I look at returns a look to me wondering what I'm doing
     here. Asking around for a taxi, I found one who knew of the destination I was going to! A middle-aged Mauritanian
     man in traditional garbs with a face carved by the elements named Zachariah. Conversation with him was difficult
@@ -161,7 +164,10 @@
     <img loading="lazy" src="https://drive.google.com/uc?export=view&id=1bgs7a1G7dNB5zQbYN2cH7doOnAjd__iP" />
     My guides exchanged a few words with the nomads, they offered us some goat milk but I didn't drink it just due to a
     mistranslation on my part. I wasn't sure if it was being offered to me or just an explanation of what it was. We
-    kept walking and eventually stopped for lunch under a tree as the grasslands flattened out. We stopped during the
+    kept walking and eventually stopped for lunch under a tree as the grasslands flattened out.
+  </p>
+  <p>
+    We stopped during the
     hottest part of the day and the winds picked up. A fine burnt red sand would blow across the ground and if you
     weren't careful it would thinly coat your food if you didn't guard against it. After eating we slept for about 2
     hours beneath the tree and waited for the hottest part of the day to be done. Even in the hottest part of the day
@@ -486,7 +492,7 @@
     would've crossed the DMZ border north into there to see it. The region used to be a Spanish colony up until about the
     early '70s, after that Mauritania and Morocco vied for control but Mauritania has since backed off, Now it has been
     between Morocco and
-    <a href ="https://en.wikipedia.org/wiki/Polisario_Front">a rebel political group started by Moroccan college students</a>
+    <a href="https://en.wikipedia.org/wiki/Polisario_Front" target="_blank">a rebel political group started by Moroccan college students</a>
     basically since then. However if you go there today it's all de facto Morocco. Whatever ground the rebel group used
     to have is basically all gone and the entire region is more or less part of Morocco now. All Mauritanians ask "are
     you going to Morocco?" And mean literally everything above their border. Travelers headed south from Dakhla all say
@@ -495,7 +501,7 @@
     doing a lot to win favor in the region. Western Saharans don't pay any Moroccan taxes but Morocco has heavily
     improved the region's infrastructure, public services, and general quality of life. If you look at the border of
     Mauritania and Western Sahara on Google Maps you'll see it's solid, but the line in the north that divides it from
-    Morocco, it's much more faint and only dashed.  Looking it up after returning, it seems like the UN takes a stance
+    Morocco, it's much more faint and only dashed. Looking it up after returning, it seems like the UN takes a stance
     that western sahara should have right to sovereignty, but right now I highly doubt that will happen (not to say
     this is good or bad).
   </p>
@@ -524,10 +530,12 @@
   <div class="divider"></div>
   <h2>Final Thoughts</h2>
 
-  <p>This was an amazing trip that I'm glad I took; my first time in Africa but certainly not the last. Even though most
+  <p>
+    This was an amazing trip that I'm glad I took; my first time in Africa but certainly not the last. Even though most
     people cannot point to the country on a map or even guess the right continent, it has a lot to offer the more
     adventurous traveler. The trek through the desert was much more of a highlight than I was expecting and I'm grateful
-    for the kind people I met along the way.</p>
+    for the kind people I met along the way.
+  </p>
 
   What I'm glad I brought
   <ul>
