--- a/src/app/projects/mauritania_trip/mauritania_trip_page.html
+++ b/src/app/projects/mauritania_trip/mauritania_trip_page.html
@@ -6,6 +6,7 @@
 
 <mat-card>
   <h1 style="text-align: center">Mauritania, April 2023</h1>
+  <div class="divider"></div>
   <h2>Forward</h2>
 
   <p>
